* data source functionality moved to separate function lib/getFatcaData.php * refactored var/www/api/getFatcaClients.php to var/www/api/transmitter.php * cleaned up code a bit

--- a/var/www/index.html
+++ b/var/www/index.html
@@ -13,25 +13,24 @@
 	<ol>
 	<li>HTML: To see data in tabular format
 		<ul>
-		<li><a href="api/getFatcaClients.php?format=html&shuffle=true"  target="_blank">shuffled</a></li>
-		<li><a href="api/getFatcaClients.php?format=html&shuffle=false" target="_blank">unshuffled</a></li>
+		<li><a href="api/transmitter.php?format=html&shuffle=true"  target="_blank">shuffled</a></li>
+		<li><a href="api/transmitter.php?format=html&shuffle=false" target="_blank">unshuffled</a></li>
 		</ul>
 	</li>
 	<li>Xml: To see the data as it is stored in the file to be transmitted to IDES
 		<ul>
-		<li><a href="api/getFatcaClients.php?format=xml&shuffle=true"  target="_blank">shuffled</a></li>
-		<li><a href="api/getFatcaClients.php?format=xml&shuffle=false" target="_blank">unshuffled</a></li>
+		<li><a href="api/transmitter.php?format=xml&shuffle=true"  target="_blank">shuffled</a></li>
+		<li><a href="api/transmitter.php?format=xml&shuffle=false" target="_blank">unshuffled</a></li>
 		</ul>
 	</li>
 	<li>Zip: To get the file that should be transmitted to IDES
 		<ul>
-		<li><a href="api/getFatcaClients.php?format=zip&shuffle=true"  target="_blank">shuffled</a></li>
-		<li><a href="api/getFatcaClients.php?format=zip&shuffle=false" target="_blank">unshuffled</a></li>
+		<li><a href="api/transmitter.php?format=zip&shuffle=true"  target="_blank">shuffled</a></li>
+		<li><a href="api/transmitter.php?format=zip&shuffle=false" target="_blank">unshuffled</a></li>
 		</ul>
 	</li>
 	</ol>
 </li>
-<li><a href="http://192.168.125.54/odywiki2/index.php/FATCA_IDES_registration">Further reading</a></li>
 <li>
 	File received:
 	<form action="api/receiver.php" method="POST" target="_blank" enctype="multipart/form-data">
