xsd validation of metadata added, added metadata format output

--- a/var/www/index.html
+++ b/var/www/index.html
@@ -11,7 +11,13 @@
 <li>
 	Data transmittable to IDES for Fatca
 	<ul>
-	<li>Format&nbsp;<select id="format"><option value="html" selected>HTML</option><option value="xml">XML</option><option value="zip">Zip</option></select>
+	<li>Format&nbsp;
+		<select id="format">
+			<option value="html" selected>HTML</option>
+			<option value="xml">XML</option>
+			<option value="zip">Zip</option>
+			<option value="metadata">Metadata</option>
+		</select>
 		<small><ul>
 		<li>HTML: To see data in tabular format</li>
 		<li>Xml: To see the data as it is stored in the file to be transmitted to IDES</li>
