pretty print html, CLI option shuffle to shuffleSkip, refactored dividend field name to dvdCur after use of local currency, added dividend to xml

--- a/var/www/index.html
+++ b/var/www/index.html
@@ -6,6 +6,7 @@
 	<ul>
 	<li><a href="https://wwwpse.idesgateway.com/"  target="_blank">test</a></li>
 	<li><a href="https://www.idesgateway.com/"     target="_blank">live</a></li>
+  <li><a href="https://www.irs.gov/Businesses/Corporations/IDES-Testing-Schedule" target="_blank">IDES Testing Schedule</a></li>
 	</ul>
 </li>
 <li>
