add emailTo to html form

--- a/var/www/index.html
+++ b/var/www/index.html
@@ -28,6 +28,7 @@
 	<li><input type="checkbox" id="shuffled">&nbsp;Shuffled</li>
 	<li>Document reference ID being corrected: <input type="text" id="corrDocRefId"></li>
 	<li><select id="taxYear"><option value="2014" selected>2014</option><option value="2015">2015</option><option value="2016">2016</option></select></li>
+	<li>Email to: <input type="text" id="emailTo"> (leave empty to not email)</li>
 	<li><a href="api/transmitter.php?format=html&shuffle=false&taxYear=2014" target="_blank" id="datalink">Get data</a></li>
 	</ul>
 </li>
@@ -43,15 +44,18 @@
 document.getElementById('shuffled').onchange=
 document.getElementById('format').onchange=
 document.getElementById('corrDocRefId').onchange=
+document.getElementById('emailTo').onchange=
 document.getElementById('taxYear').onchange=function(e) {
 	f=document.getElementById("format").value;
 	s=document.getElementById("shuffled").checked;
 	c=document.getElementById("corrDocRefId").value;
+	e=document.getElementById("emailTo").value;
 	y=document.getElementById("taxYear").value;
 	h="api/transmitter.php?format="+f+"&shuffle="+(s?"true":"false")+"&taxYear="+y;
 	if(c.length>0) {
 		h+="&CorrDocRefId="+c;
 	} 
+	if(e.length>0) { h+="&emailto="+e; } 
 	document.getElementById("datalink").href=h;
 }
 
