typo in emailTo query param

--- a/var/www/index.html
+++ b/var/www/index.html
@@ -55,7 +55,7 @@ document.getElementById('taxYear').onchange=function(e) {
 	if(c.length>0) {
 		h+="&CorrDocRefId="+c;
 	} 
-	if(e.length>0) { h+="&emailto="+e; } 
+	if(e.length>0) { h+="&emailTo="+e; } 
 	document.getElementById("datalink").href=h;
 }
 
