--- a/sample-webApp/www/index.html
+++ b/sample-webApp/www/index.html
@@ -29,12 +29,12 @@
 	<li>Document reference ID being corrected: <input type="text" id="corrDocRefId"></li>
 	<li><select id="taxYear"><option value="2014" selected>2014</option><option value="2015">2015</option><option value="2016">2016</option></select></li>
   <li>Email to: <input type="text" id="emailTo"> (leave empty to not email)</li>
-	<li><a href="api/transmitter.php?format=html&shuffle=false&taxYear=2014" target="_blank" id="datalink">Get data</a></li>
+	<li><a href="transmitter.php?format=html&shuffle=false&taxYear=2014" target="_blank" id="datalink">Get data</a></li>
 	</ul>
 </li>
 <li>
 	File received from IDES:
-	<form action="api/receiver.php" method="POST" target="_blank" enctype="multipart/form-data">
+	<form action="receiver.php" method="POST" target="_blank" enctype="multipart/form-data">
 	<input type="file" name="myFile" id="myFile" accept="application/zip">
 	<input type="submit" value="Read" disabled id="submitBtn" >
 	</form>
@@ -51,7 +51,7 @@ document.getElementById('taxYear').onchange=function(e) {
   c=document.getElementById("corrDocRefId").value;
   e=document.getElementById("emailTo").value;
 	y=document.getElementById("taxYear").value;
-	h="api/transmitter.php?format="+f+"&shuffle="+(s?"true":"false")+"&taxYear="+y;
+	h="transmitter.php?format="+f+"&shuffle="+(s?"true":"false")+"&taxYear="+y;
 	if(c.length>0) {
 		h+="&CorrDocRefId="+c;
 	} 
