passwrod field in html hide password

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
 		<li>HTML: To see data in tabular format</li>
 		<li>Xml: To see the data as it is stored in the file to be transmitted to IDES</li>
 		<li>Zip: To get the file that should be transmitted to IDES</li>
+		<li><i>Note: This format field will be ignored if the email field below is filed</i></li>
 		</ul></small>
 	</li>
 	<li><input type="checkbox" id="shuffled">&nbsp;Shuffled</li>
@@ -32,7 +33,7 @@
 	<li>Upload to IDES gateway:
 		<ul>
 			<li>Username: <input type="text" id="uploadUsername"></li>
-			<li>Password: <input type="text" id="uploadPassword"></li>
+			<li>Password: <input type="password" id="uploadPassword"></li>
 		</ul>
 	</li>
 	<li><a href="transmitter.php?format=html&shuffle=false&taxYear=2014" target="_blank" id="datalink">Get data</a></li>
